# stadio

./: .gitignore  Cargo.toml  README.md  stadio.yaml.example
src/: config.rs  main.rs
