[package]
name = "stadio"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper = { version = "1.4.1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
tokio = { version = "1.39.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
bytes = "1.7.1"
http-body-util = "0.1.2"
hyper-tls = "0.6.0"
